web/static/my.css
/* ... */
main {
	display: flex;
    flex-direction: row;
}

aside,
article {
    display: flex;
    flex-direction: column;
    min-height: 500px;
}

aside {
	background-color: var(--background);
	/* flex-grow: 1; */
    min-width: 250px;
	height: 100vh;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

aside > header {
	text-align: center;
	margin: 15px;
	color: var(--blue);
}

aside > header > nav button {
	font-size: 1.4rem;
	color: var(--cyan);
}

button {
	border: none;
	background-color: transparent;
	cursor: pointer;
}

nav > button:hover, dialog button:hover {
	text-shadow: var(--yellow) 1px 0 10px;
}

aside nav > header {
	font-weight: bold;
	margin: 0 10px;
	text-transform: uppercase;
	text-shadow: black 1px 0 10px;
	color: var(--green);
}

article {
	flex-grow: 5;
}

section, .minigrid {
	display: grid;
	grid-template: 1fr 1fr / 1fr 1fr;
}

section {
	height: 100vh;
}

.minigrid {
	margin-top: 3px;
}

.minigrid div {
	border: 1px var(--black) solid;
	border-radius: 5px;
	text-align: center;
	display: flex;
    justify-content: center;
    align-items: center;
	margin: 2px;
	cursor: pointer;
}

.minigrid div:not(.disabled):hover {
	background-color: var(--background-opacity);
}

.minigrid div.disabled {
	background-color: var(--background);
	opacity: 0.3;
	cursor: not-allowed;
}

section > div {
	margin: 10px;
	display: flex;
	flex-direction: column;
	/* height: calc(100vh - 20px); */
}

.tab {
	display: none;
	padding: 5px;
	border-bottom: 1px solid var(--bblack);
	border-left: 1px solid var(--bblack);
	border-right: 1px solid var(--bblack);
	border-radius: 0 0 5px 5px;
	background-color: var(--background-opacity);
	box-shadow: 13px 13px 14px -10px rgba(0, 0, 0, 0.74);
	overflow-y: auto;
	scrollbar-color: var(--blue) var(--black);
	scrollbar-width: thin;
	height: 100%;
}

code {
	font-family: monospace;
	word-break: break-all;
	white-space: pre-wrap;
	line-height: 1.2;
	font-size: var(--fontsize);
}

@keyframes blinker {
	50% {
	  /* background-color: transparent; */
	  color: transparent;
	}
}

@keyframes cursor-blinker {
	50% {
	  background-color: transparent;
	  color: var(--white);
	}
}

code span.cursor {
	background-color: var(--white);
	animation: cursor-blinker 1.2s step-end infinite;
	color: var(--black);
}

code span.bold {
	font-weight: bold;
}

code span.dim {
	opacity: 0.6;
}

code span.italic {
	font-style: italic;
}

code span.underline {
	text-decoration: underline;
}

code span.blink {
	animation: blinker 0.7s step-end infinite;
}

code span.strike {
	text-decoration: line-through;
}

code {
	color: var(--white);
}

code span.invert {
	color: var(--black);
	background-color: var(--white);
}

/*--------------------*/
code span.fg_black:not(.invert) {
	color: var(--black);
}

code span.fg_red:not(.invert) {
	color: var(--red);
}

code span.fg_green:not(.invert) {
	color: var(--green);
}

code span.fg_yellow:not(.invert) {
	color: var(--yellow);
}

code span.fg_blue:not(.invert) {
	color: var(--blue);
}

code span.fg_magenta:not(.invert) {
	color: var(--magenta);
}

code span.fg_cyan:not(.invert) {
	color: var(--cyan);
}

code span.fg_white:not(.invert) {
	color: var(--white);
}

code span.fg_black.fg_bright:not(.invert) {
	color: var(--bblack);
}

code span.fg_red.fg_bright:not(.invert) {
	color: var(--bred);
}

code span.fg_green.fg_bright:not(.invert) {
	color: var(--bgreen);
}

code span.fg_yellow.fg_bright:not(.invert) {
	color: var(--byellow);
}

code span.fg_blue.fg_bright:not(.invert) {
	color: var(--bblue);
}

code span.fg_magenta.fg_bright:not(.invert) {
	color: var(--bmagenta);
}

code span.fg_cyan.fg_bright:not(.invert) {
	color: var(--bcyan);
}

code span.fg_white.fg_bright:not(.invert) {
	color: var(--bwhite);
}

code span.fg_black.invert {
	background-color: var(--black);
}

code span.fg_red.invert {
	background-color: var(--red);
}

code span.fg_green.invert {
	background-color: var(--green);
}

code span.fg_yellow.invert {
	background-color: var(--yellow);
}

code span.fg_blue.invert {
	background-color: var(--blue);
}

code span.fg_magenta.invert {
	background-color: var(--magenta);
}

code span.fg_cyan.invert {
	background-color: var(--cyan);
}

code span.fg_white.invert {
	background-color: var(--white);
}

code span.fg_black.fg_bright.invert {
	background-color: var(--bblack);
}

code span.fg_red.fg_bright.invert {
	background-color: var(--bred);
}

code span.fg_green.fg_bright.invert {
	background-color: var(--bgreen);
}

code span.fg_yellow.fg_bright.invert {
	background-color: var(--byellow);
}

code span.fg_blue.fg_bright.invert {
	background-color: var(--bblue);
}

code span.fg_magenta.fg_bright.invert {
	background-color: var(--bmagenta);
}

code span.fg_cyan.fg_bright.invert {
	background-color: var(--bcyan);
}

code span.fg_white.fg_bright.invert {
	background-color: var(--bwhite);
}

/*--------------------*/

code span.bg_black:not(.invert) {
	background-color: var(--black);
}

code span.bg_red:not(.invert) {
	background-color: var(--red);
}

code span.bg_green:not(.invert) {
	background-color: var(--green);
}

code span.bg_yellow:not(.invert) {
	background-color: var(--yellow);
}

code span.bg_blue:not(.invert) {
	background-color: var(--blue);
}

code span.bg_magenta:not(.invert) {
	background-color: var(--magenta);
}

code span.bg_cyan:not(.invert) {
	background-color: var(--cyan);
}

code span.bg_white:not(.invert) {
	background-color: var(--white);
}

/*--------------------*/

code span.bg_black.bg_bright:not(.invert) {
	background-color: var(--bblack);
}

code span.bg_red.bg_bright:not(.invert) {
	background-color: var(--bred);
}

code span.bg_green.bg_bright:not(.invert) {
	background-color: var(--bgreen);
}

code span.bg_yellow.bg_bright:not(.invert) {
	background-color: var(--byellow);
}

code span.bg_blue.bg_bright:not(.invert) {
	background-color: var(--bblue);
}

code span.bg_magenta.bg_bright:not(.invert) {
	background-color: var(--bmagenta);
}
/* ... */

